# web_executor

./: Cargo.toml
src/: main.rs
static/: contrast.css  dark.css  executor.js  index.html  main.js
