[package]
name = "web_executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
warp = { version = "0.3.6", features = ["websocket"] }
